TEST_PROGRAMS/VALID/05/binary_shift_left.go
/* Binary shift left. */
package main

func main() {
	x:=1
	println(x<<1)
}
