TEST_PROGRAMS/INVALID/05/global_short_assign.go
/* Short assign used outside function. */

package main

// Error: short assign, ':=', used outside of function
num := 10

func main()  {
  println(num)
}
